--- a/index.html
+++ b/index.html
@@ -127,48 +127,156 @@
 	</section>
 	<!-- /Section 1 -->
 	<!-- Section 2 -->
-	<!-- <section>
+	<section class="sect_2">
 		<div class="row">
 			<div class="ucd_h2_wrapp">
 				<h2><span>Responsive</span> Mobile Design</h2>
 			</div>
-			<div class="ucd_slider_1">
-				<div>
-					<div class="ucd_slide">
-						<div class="ucd_img_box">
-							<img src="img/" alt="" />
+		</div>
+		<div class="ucd_slider_1">
+			<div>
+				<div class="ucd_slide">
+					<div class="ucd_img_box">
+						<div class="ucd_img">
+							<img src="img/img_03.jpg" alt="" />
+						</div>
+					</div>
+				</div>
+			</div>
+			<div>
+				<div class="ucd_slide">
+					<div class="ucd_img_box">
+						<div class="ucd_img">
+							<img src="img/img_03.jpg" alt="" />
+						</div>
+					</div>
+				</div>
+			</div>
+			<div>
+				<div class="ucd_slide">
+					<div class="ucd_img_box">
+						<div class="ucd_img">
+							<img src="img/img_03.jpg" alt="" />
+						</div>
+					</div>
+				</div>
+			</div>
+			<div>
+				<div class="ucd_slide">
+					<div class="ucd_img_box">
+						<div class="ucd_img">
+							<img src="img/img_03.jpg" alt="" />
+						</div>
+					</div>
+				</div>
+			</div>
+			<div>
+				<div class="ucd_slide">
+					<div class="ucd_img_box">
+						<div class="ucd_img">
+							<img src="img/img_03.jpg" alt="" />
+						</div>
+					</div>
+				</div>
+			</div>
+			<div>
+				<div class="ucd_slide">
+					<div class="ucd_img_box">
+						<div class="ucd_img">
+							<img src="img/img_03.jpg" alt="" />
+						</div>
+					</div>
+				</div>
+			</div>
+			<div>
+				<div class="ucd_slide">
+					<div class="ucd_img_box">
+						<div class="ucd_img">
+							<img src="img/img_03.jpg" alt="" />
 						</div>
 					</div>
 				</div>
 			</div>
 		</div>
-	</section> -->
+	</section>
 	<!-- /Section 2 -->
 	<!-- Section 3 -->
-	<!-- <section>
+	<section class="sect_3">
 		<div class="row">
 			<div class="ucd_h2_wrapp">
 				<h2><span>Responsive</span> Tablet Design</h2>
 			</div>
-			<div class="ucd_slider_2">
-				<div>
-					<div class="ucd_slide">
-						<div class="ucd_img_box">
-							<img src="img/" alt="" />
+		</div>
+		<div class="ucd_slider_2">
+			<div>
+				<div class="ucd_slide_tab">
+					<div class="ucd_img_box_tab">
+						<div class="ucd_img_tab">
+							<img src="img/tab_img.jpg" alt="" />
+						</div>
+					</div>
+				</div>
+			</div>
+			<div>
+				<div class="ucd_slide_tab">
+					<div class="ucd_img_box_tab">
+						<div class="ucd_img_tab">
+							<img src="img/tab_img.jpg" alt="" />
+						</div>
+					</div>
+				</div>
+			</div>
+			<div>
+				<div class="ucd_slide_tab">
+					<div class="ucd_img_box_tab">
+						<div class="ucd_img_tab">
+							<img src="img/tab_img.jpg" alt="" />
+						</div>
+					</div>
+				</div>
+			</div>
+			<div>
+				<div class="ucd_slide_tab">
+					<div class="ucd_img_box_tab">
+						<div class="ucd_img_tab">
+							<img src="img/tab_img.jpg" alt="" />
+						</div>
+					</div>
+				</div>
+			</div>
+			<div>
+				<div class="ucd_slide_tab">
+					<div class="ucd_img_box_tab">
+						<div class="ucd_img_tab">
+							<img src="img/tab_img.jpg" alt="" />
 						</div>
 					</div>
 				</div>
 			</div>
 		</div>
-	</section> -->
+	</section>
 	<!-- /Section 3 -->
+	<!-- Section 4 -->
+	<section class="sect_4">
+		<div class="row">
+			<div class="ucd_h2_wrapp">
+				<h2><span>Template</span> service page</h2>
+			</div>
+			<div class="job_img">
+				<img src="img/job.jpg" alt="" />
+			</div>
+		</div>
+	</section>
+	<!-- /Section 4 -->
 	</div>
 	<!-- /Content -->
 	<!-- Footer -->
 	<!-- /Footer -->
 	</div>
 	<link rel="stylesheet" type="text/css" href="responsive.css">
+	<link rel="stylesheet" type="text/css" href="slick/slick.css">
 	<script src="vendors/js/jquery.js"></script>
+	<script src="slick/slick.js"></script>
 	<script src="js/scripts.js"></script>
 </body>
 </html>
