--- a/index.html
+++ b/index.html
@@ -79,6 +79,9 @@
 						<h2><span>Design</span> Solutions</h2>
 						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris lectus dolor, pretium vitae pellentesque ac, pretium nec diam.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris lectus dolor, pretium vitae pellentesque ac, pretium nec diam.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris lectus dolor, pretium vitae pellentesque ac, pretium nec diam.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris lectus dolor, pretium vitae pellentesque ac, pretium nec diam.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris lectus dolor, pretium vitae pellentesque ac, pretium nec diam.</p>
 					</div>
+					<div class="resp_img">
+						<img src="img/img_20.jpg" alt="" />
+					</div>
 					<div class="ucd_article_descript ucd_article_descript_2">
 						<h2><span>Typography &</span> colors</h2>
 						<h3>Montserrat / Lato</h3>
@@ -131,15 +134,23 @@
 							</div>
 						</div>
 					</div>
+					<div class="resp_img resp_img_2">
+						<img src="img/img_21.jpg" alt="" />
+					</div>
 					<div class="ucd_article_descript">
 						<h2><span>Functional</span> Solutions</h2>
 						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris lectus dolor, pretium vitae pellentesque ac, pretium nec diam.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris lectus dolor, pretium vitae pellentesque ac, pretium nec diam.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris lectus dolor, pretium vitae pellentesque ac, pretium nec diam.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris lectus dolor, pretium vitae pellentesque ac, pretium nec diam.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris lectus dolor, pretium vitae pellentesque ac, pretium nec diam.</p>
+						<div class="resp_img resp_img_3">
+							<img src="img/img_22.jpg" alt="" />
+						</div>
 						<h2><span>Project</span> Results</h2>
 						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris lectus dolor, pretium vitae pellentesque ac, pretium nec diam.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris lectus dolor, pretium vitae pellentesque ac, pretium nec diam.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris lectus dolor, pretium vitae pellentesque ac, pretium nec diam.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris lectus dolor, pretium vitae pellentesque ac, pretium nec diam.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris lectus dolor, pretium vitae pellentesque ac, pretium nec diam.</p>
 					</div>
 				</div>
 				<div>
-					<img src="img/img_02.png" alt="" />
+					<div>
+						<img src="img/img_02.png" alt="" />
+					</div>
 				</div>
 			</div>
 		</div>
@@ -242,50 +253,48 @@
 				<h2><span>Responsive</span> Tablet Design</h2>
 			</div>
 		</div>
-		<div class="row row_3">
-			<div class="ucd_slider_2">
-				<div>
-					<div class="ucd_slide_tab">
-						<div class="ucd_img_box_tab">
-							<div class="ucd_img_tab">
-								<img src="img/sl_06.jpg" alt="" />
-							</div>
+		<div class="ucd_slider_2">
+			<div>
+				<div class="ucd_slide_tab">
+					<div class="ucd_img_box_tab">
+						<div class="ucd_img_tab">
+							<img src="img/sl_06.jpg" alt="" />
 						</div>
 					</div>
 				</div>
-				<div>
-					<div class="ucd_slide_tab">
-						<div class="ucd_img_box_tab">
-							<div class="ucd_img_tab">
-								<img src="img/sl_07.jpg" alt="" />
-							</div>
+			</div>
+			<div>
+				<div class="ucd_slide_tab">
+					<div class="ucd_img_box_tab">
+						<div class="ucd_img_tab">
+							<img src="img/sl_07.jpg" alt="" />
 						</div>
 					</div>
 				</div>
-				<div>
-					<div class="ucd_slide_tab">
-						<div class="ucd_img_box_tab">
-							<div class="ucd_img_tab">
-								<img src="img/sl_08.jpg" alt="" />
-							</div>
+			</div>
+			<div>
+				<div class="ucd_slide_tab">
+					<div class="ucd_img_box_tab">
+						<div class="ucd_img_tab">
+							<img src="img/sl_08.jpg" alt="" />
 						</div>
 					</div>
 				</div>
-				<div>
-					<div class="ucd_slide_tab">
-						<div class="ucd_img_box_tab">
-							<div class="ucd_img_tab">
-								<img src="img/sl_09.jpg" alt="" />
-							</div>
+			</div>
+			<div>
+				<div class="ucd_slide_tab">
+					<div class="ucd_img_box_tab">
+						<div class="ucd_img_tab">
+							<img src="img/sl_09.jpg" alt="" />
 						</div>
 					</div>
 				</div>
-				<div>
-					<div class="ucd_slide_tab">
-						<div class="ucd_img_box_tab">
-							<div class="ucd_img_tab">
-								<img src="img/sl_10.jpg" alt="" />
-							</div>
+			</div>
+			<div>
+				<div class="ucd_slide_tab">
+					<div class="ucd_img_box_tab">
+						<div class="ucd_img_tab">
+							<img src="img/sl_10.jpg" alt="" />
 						</div>
 					</div>
 				</div>
@@ -408,13 +417,15 @@
 			<div class="ucd_jobs_thumbs_header">
 				<h3>Photos</h3>
 			</div>
-			<div class="ucd_jobs_thumbs">
+			<div class="ucd_jobs_thumbs ucd_jobs_thumbs_first">
 				<div>
+					<h3 class="resp_title">Default</h3>
 					<div class="ucd_img_box_2">
 						<img src="img/img_05.png" alt="" />
 					</div>
 				</div>
 				<div>
+					<h3 class="resp_title">Hover/Pressed</h3>
 					<div class="ucd_img_box_2">
 						<img src="img/img_06.png" alt="" />
 					</div>
@@ -424,25 +435,29 @@
 				<div class="ucd_jobs_thumbs_header">
 					<h3>Cards</h3>
 				</div>
-				<div class="ucd_jobs_thumbs">
+				<div class="ucd_jobs_thumbs ucd_jobs_thumbs_second">
 					<div>
+						<h3 class="resp_title">Default</h3>
 						<div class="ucd_img_box_2">
 							<img src="img/img_07.png" alt="" />
 						</div>
 					</div>
 					<div>
+						<h3 class="resp_title">Hover/Pressed</h3>
 						<div class="ucd_img_box_2">
 							<img src="img/img_08.png" alt="" />
 						</div>
 					</div>
 				</div>
-				<div class="ucd_jobs_thumbs">
+				<div class="ucd_jobs_thumbs ucd_jobs_thumbs_tree">
 					<div>
+						<h3 class="resp_title">Default</h3>
 						<div class="ucd_img_box_2">
 							<img src="img/img_09.png" alt="" />
 						</div>
 					</div>
 					<div>
+						<h3 class="resp_title">Hover/Pressed</h3>
 						<div class="ucd_img_box_2">
 							<img src="img/img_10.png" alt="" />
 						</div>
@@ -453,18 +468,21 @@
 				<div class="ucd_jobs_thumbs_header">
 					<h3>Text</h3>
 				</div>
-				<div class="ucd_jobs_thumbs">
+				<div class="ucd_jobs_thumbs ucd_jobs_thumbs_four">
 					<div>
+						<h3 class="resp_title">Default</h3>
 						<div class="ucd_img_box_2">
 							<img src="img/img_11.png" alt="" />
 						</div>
 					</div>
 					<div>
+						<h3 class="resp_title">Hover/Pressed</h3>
 						<div class="ucd_img_box_2">
 							<img src="img/img_12.png" alt="" />
 						</div>
 					</div>
 					<div>
+						<h3 class="resp_title">Pressed</h3>
 						<div class="ucd_img_box_2">
 							<img src="img/img_13.png" alt="" />
 						</div>
@@ -477,22 +495,25 @@
 				</div>
 				<div class="ucd_jobs_thumbs">
 					<div>
+						<h3 class="resp_title">Default</h3>
 						<div class="ucd_img_box_2">
 							<img src="img/img_14.png" alt="" />
 						</div>
 					</div>
 					<div>
+						<h3 class="resp_title">Hover/Pressed</h3>
 						<div class="ucd_img_box_2">
 							<img src="img/img_15.png" alt="" />
 						</div>
 					</div>
 					<div>
+						<h3 class="resp_title">Pressed</h3>
 						<div class="ucd_img_box_2">
 							<img src="img/img_16.png" alt="" />
 						</div>
 					</div>
 				</div>
-				<div class="ucd_jobs_thumbs">
+				<div class="ucd_jobs_thumbs ucd_jobs_thumbs_last">
 					<div>
 						<div class="ucd_img_box_2">
 							<img src="img/img_17.png" alt="" />
