--- a/projectsecond.html
+++ b/projectsecond.html
@@ -13,13 +13,12 @@
 	<link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,600,700,800,900&amp;display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
 	<title>Uniondesign</title>
-	<!-- <script>document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')</script> -->
 </head>
 <body>
 	<div class="wrapper">
 	<!-- Content -->
 	<div class="content">
-	<svg class="shape_01" width="297" height="507" viewBox="0 0 297 507" fill="none" xmlns="http://www.w3.org/2000/svg">
+	<svg class="shape_01 shape_01_2" width="297" height="507" viewBox="0 0 297 507" fill="none" xmlns="http://www.w3.org/2000/svg">
 	<g opacity="0.5">
 	<mask id="mask0_35_885" style="mask-type:alpha" maskUnits="userSpaceOnUse" x="-446" y="-236" width="743" height="743">
 	<circle cx="-74.5" cy="135.5" r="371.5" fill="url(#paint0_radial_35_885)"/>
@@ -62,8 +61,11 @@
 		</svg>
 		<div class="transparent_box_2 transparent_box_2_2"></div>
 		<div class="row row_2">
-			<div class="ucd_h1_wrapp">
+			<div class="ucd_h1_wrapp ucd_h1_wrapp_2">
 				<h1><span class="up"><span class="green">Complete</span> brand identity</span><br />for Sunrise Montessori Preschool</h1>
+			</div>
+			<div class="ucd_h1_wrapp ucd_h1_wrapp_2_resp">
+				<h1><span class="up">Complete <span class="green">Digital Marketing</span></span><br /> for Sunrise Montessori Preschool</h1>
 			</div>
 		</div>
 		<div class="row">
@@ -99,6 +101,9 @@
 	<!-- Section 2 - 2 -->
 	<section class="sect_2_2">
 		<div class="row">
+			<div class="article_prs_descript_resp">
+				<h2><span>Prymary</span> logo</h2>
+			</div>
 			<div class="article_prs">
 				<div>
 					<div class="article_prs_descript">
@@ -149,7 +154,8 @@
 					</div>
 				</div>
 				<div>
-					<img src="img/img_2_6.png" alt=""  loading="lazy" />
+					<img class="article_prs_2_img_desc" src="img/img_2_6.png" alt=""  loading="lazy" />
+					<img class="article_prs_2_img_resp" src="img/img_2_6_resp.png" alt=""  loading="lazy" />
 				</div>
 			</div>
 		</div>
@@ -222,6 +228,25 @@
 		</radialGradient>
 		</defs>
 		</svg>
+
+		<svg class="req_03 req_03_4" width="197" height="179" viewBox="0 0 197 179" fill="none" xmlns="http://www.w3.org/2000/svg">
+		<g filter="url(#filter0_d_114_3681)">
+		<path d="M133.077 142.495L165.137 86.7016C165.671 85.772 165.668 84.6279 165.13 83.7007L133.08 28.4938C132.543 27.5691 131.554 27 130.485 27L66.0759 27C65.0005 27 64.0073 27.5757 63.4727 28.5089L31.8498 83.7157C31.323 84.6353 31.3205 85.7646 31.8432 86.6865L63.4751 142.48C64.0078 143.419 65.0046 144 66.0848 144L130.476 144C131.55 144 132.542 143.426 133.077 142.495Z" fill="#0C9AA8"/>
+		</g>
+		<defs>
+		<filter id="filter0_d_114_3681" x="0.45294" y="0" width="196.083" height="179" filterUnits="userSpaceOnUse" color-interpolation-filters="sRGB">
+		<feFlood flood-opacity="0" result="BackgroundImageFix"/>
+		<feColorMatrix in="SourceAlpha" type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0" result="hardAlpha"/>
+		<feOffset dy="4"/>
+		<feGaussianBlur stdDeviation="15.5"/>
+		<feComposite in2="hardAlpha" operator="out"/>
+		<feColorMatrix type="matrix" values="0 0 0 0 0.0470588 0 0 0 0 0.603922 0 0 0 0 0.658824 0 0 0 0.5 0"/>
+		<feBlend mode="normal" in2="BackgroundImageFix" result="effect1_dropShadow_114_3681"/>
+		<feBlend mode="normal" in="SourceGraphic" in2="effect1_dropShadow_114_3681" result="shape"/>
+		</filter>
+		</defs>
+		</svg>
+		<div class="transparent_box_2 transparent_box_2_4"></div>
 	</section>
 	<!-- /Section 4 - 2 -->
 	<!-- Section 5 - 2 -->
@@ -432,7 +457,7 @@
 	</section>
 	<!-- /Section 10 - 2 -->
 	<!-- Section 6 -->
-	<section class="sect_6">
+	<section class="sect_6 sect_6_2">
 		<svg class="req_03" width="183" height="167" viewBox="0 0 183 167" fill="none" xmlns="http://www.w3.org/2000/svg">
 		<g filter="url(#filter0_d_1_156)">
 		<path d="M122.581 130.493L151.139 80.731C151.672 79.8021 151.669 78.6595 151.132 77.733L122.583 28.4952C122.047 27.5697 121.058 27 119.988 27L62.6198 27C61.5438 27 60.5502 27.5763 60.0158 28.5103L31.8479 77.748C31.3222 78.6668 31.3197 79.7947 31.8413 80.7159L60.0182 130.478C60.5507 131.419 61.5479 132 62.6287 132L119.979 132C121.054 132 122.046 131.425 122.581 130.493Z" fill="#B5E51D"/>
